# cloud_minecraft

./: .dockerignore  .gitignore  Dockerfile  README.md  licence.md
admin_panel/: Cargo.toml
admin_panel/src/: env.rs  error.rs  logger.rs  main.rs
admin_panel/src/controllers/: auth.rs  protected.rs
admin_panel/src/models/: auth.rs  mod.rs  protected.rs
admin_panel/src/server/: mod.rs  online_poller.rs  proxy_service.rs
admin_panel/static/: home.html  login.html  server.properties
deployments/azure/: azure.bicep  azure.json  azure.md
