[package]
name = "admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", default-features = false, features = ["http1", "form", "json", "headers"] }
axum-extra = { version = "0.3", default-features = false, features = ["cookie"] }
cookie = { version = "0.16", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "process"] }
tower-http = { version = "0.3", default-features = false, features = ["cors"] }
jsonwebtoken = { version = "8", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = { version = "1", default-features = false }
minecraft-client-rs = { version = "0.1", default-features = false }
log = "^0"
log4rs = { version = "^1", default-features = false, features = ["console_appender"] }
fs_extra = "1.2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"